<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LandingActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/landingHeaderImageView"
            android:layout_width="180dp"
            android:layout_height="190dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:srcCompat="@drawable/splash_screen_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/button_login"
            app:layout_constraintBottom_toTopOf="@id/facebookLoginButton"
            app:layout_constraintEnd_toStartOf="@id/signupButton"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/facebookLoginButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signupButton"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/button_signup"
            app:backgroundTint="@color/agoraYellow"
            app:layout_constraintBottom_toTopOf="@id/facebookLoginButton"
            app:layout_constraintEnd_toEndOf="@id/facebookLoginButton"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/loginButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/facebookLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/landingHeaderImageView"
            app:backgroundTint="@color/facebookBlue"
            app:icon="@drawable/ic_facebook_round"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:text="@string/button_facebook_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>